@@ -102,6 +102,44 @@ int32_t SPVM__Net__SSLeay__set_fd(SPVM_ENV* env, SPVM_VALUE* stack) {
   return 0;
 }
 
+int32_t SPVM__Net__SSLeay__set_tlsext_host_name(SPVM_ENV* env, SPVM_VALUE* stack) {
+  
+  int32_t error_id = 0;
+  
+  void* obj_self = stack[0].oval;
+  
+  void* obj_name = stack[1].oval;
+  
+  if (!obj_name) {
+    return env->die(env, stack, "The host name $name must be defined.", __func__, FILE_NAME, __LINE__);
+  }
+  
+  const char* name = env->get_chars(env, stack, obj_name);
+  
+  SSL* ssl = env->get_pointer(env, stack, obj_self);
+  
+  ERR_clear_error();
+  
+  int32_t status = SSL_set_tlsext_host_name(ssl, name);
+  
+  if (!(status == 1)) {
+    int64_t ssl_error = ERR_peek_last_error();
+    
+    char ssl_error_string[256] = {0};
+    ERR_error_string_n(ssl_error, ssl_error_string, sizeof(ssl_error_string));
+    
+    int32_t error_id = env->get_basic_type_id_by_name(env, stack, "Net::SSLeay::Error", &error_id, __func__, FILE_NAME, __LINE__);
+    if (error_id) { return error_id; }
+    
+    env->die(env, stack, "[OpenSSL Error]SSL_set_tlsext_host_name failed.", __func__, FILE_NAME, __LINE__);
+    return error_id;
+  }
+  
+  stack[0].ival = status;
+  
+  return 0;
+}
+
 int32_t SPVM__Net__SSLeay__connect(SPVM_ENV* env, SPVM_VALUE* stack) {
   
   int32_t error_id = 0;
@@ -202,44 +240,6 @@ int32_t SPVM__Net__SSLeay__shutdown(SPVM_ENV* env, SPVM_VALUE* stack) {
     if (error_id) { return error_id; }
     
     env->die(env, stack, "[OpenSSL Error]SSL_shutdown failed.", __func__, FILE_NAME, __LINE__);
-    return error_id;
-  }
-  
-  stack[0].ival = status;
-  
-  return 0;
-}
-
-int32_t SPVM__Net__SSLeay__set_tlsext_host_name(SPVM_ENV* env, SPVM_VALUE* stack) {
-  
-  int32_t error_id = 0;
-  
-  void* obj_self = stack[0].oval;
-  
-  void* obj_name = stack[1].oval;
-  
-  if (!obj_name) {
-    return env->die(env, stack, "The $name must be defined.", __func__, FILE_NAME, __LINE__);
-  }
-  
-  const char* name = env->get_chars(env, stack, obj_name);
-  
-  SSL* ssl = env->get_pointer(env, stack, obj_self);
-  
-  ERR_clear_error();
-  
-  int32_t status = SSL_set_tlsext_host_name(ssl, name);
-  
-  if (!(status == 1)) {
-    int64_t ssl_error = ERR_peek_last_error();
-    
-    char ssl_error_string[256] = {0};
-    ERR_error_string_n(ssl_error, ssl_error_string, sizeof(ssl_error_string));
-    
-    int32_t error_id = env->get_basic_type_id_by_name(env, stack, "Net::SSLeay::Error", &error_id, __func__, FILE_NAME, __LINE__);
-    if (error_id) { return error_id; }
-    
-    env->die(env, stack, "[OpenSSL Error]SSL_set_tlsext_host_name failed.", __func__, FILE_NAME, __LINE__);
     return error_id;
   }
   
